[package]
name = "yambar-hyprland-wses"
description = "Hyprland workspace listing script for Yambar"
version = "0.2.0-alpha.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/jonhoo/yambar-hyprland-wses.git"
categories = ["command-line-utilities"]
keywords = ["hyprland", "yambar", "wayland"]

[dependencies]
anyhow = "1.0.72"
hyprland = "0.4.0-alpha.2"
